--- a/DistributorLogin.html
+++ b/DistributorLogin.html
@@ -83,7 +83,7 @@ body {font-family: Arial, Helvetica, sans-serif;
           <li><a href="DistributorLogin.html">Distributor</a></li>
           <li><a href="PharmacyLogin.html">Pharmacy</a></li>
           <li><a href="AdminLogin.html">Admin</a>
-          <!-- <li><a href="contact.html">Contact</a></li> -->
+         <!--  <li><a href="contact.html">Contact</a></li> -->
          <!--  <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="services.html">Services</a></li>
@@ -105,15 +105,15 @@ body {font-family: Arial, Helvetica, sans-serif;
   </header><!-- End Header -->
 
   <!-- ======= Supplier Registration Section ======= -->
-  <section id="pharmacyreg" class="pharmacyreg">
+  <section id="distributorreg" class="distributorreg">
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
           <div class="col-lg-6">
            <div class="icon-box" align="center">
         <div class="section-title"><br>        
-          <p>Supplier Login</p>
+          <p>Distributor Login</p>
                   </div>  
-            <form action="PharmacyLoginCon" method="post">
+            <form action="DistributorLoginCon" method="post">
                     
               <div class="form-group mt-1">
               <input type="text" name="email" class="form-control custom-labels" title="" required="required" placeholder="Enter Email" />
@@ -125,7 +125,7 @@ body {font-family: Arial, Helvetica, sans-serif;
                           
               <div class="text-center">                     
          <input type="submit" value="Login"><br>
-         <a href="PharmacyReg.html" style="color:gold" >Not Register? Register here!!</a><br><br>
+         <a href="DistributorReg.html" style="color:gold" >Not Register? Register here!!</a><br><br>
               </div>              
             </form>
           </div>
