--- a/Home.html
+++ b/Home.html
@@ -50,19 +50,19 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="Home.jsp"><b>Drug Traceability</b></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="Home.html"><b>Drug Traceability</b></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="Home.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
           <li><a class="active" href="Home.html">Home</a></li>
           <li><a href="SupplierLogin.html">Supplier</a></li>
-          <li><a href="ManufaturerLogin.jsp">Manufacturer</a></li>
-          <li><a href="DistributorLogin.jsp">Distributor</a></li>
-          <li><a href="PharmacyLogin.jsp">Pharmacy</a></li>
-          <li><a href="AdminLogin.jsp">Admin</a>
-          <li><a href="PatientLogin.jsp">Patient</a>
+          <li><a href="ManufaturerLogin.html">Manufacturer</a></li>
+          <li><a href="DistributorLogin.html">Distributor</a></li>
+          <li><a href="PharmacyLogin.html">Pharmacy</a></li>
+          <li><a href="AdminLogin.html">Admin</a>
+          <li><a href="PatientLogin.html">Patient</a>
         
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -84,7 +84,7 @@
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Drug Traceability</h1>
       <h2></h2>
-      <a href="SupplierLogin.jsp" class="btn-about">Get Started</a>
+      <a href="SupplierLogin.html" class="btn-about">Get Started</a>
     </div>
   </section><!-- End Hero -->
 
