--- a/PharmacyLogin.html
+++ b/PharmacyLogin.html
@@ -111,7 +111,7 @@ body {font-family: Arial, Helvetica, sans-serif;
           <div class="col-lg-6">
            <div class="icon-box" align="center">
         <div class="section-title"><br>        
-          <p>Supplier Login</p>
+          <p>Pharmacy Login</p>
                   </div>  
             <form action="PharmacyLoginCon" method="post">
                     
