Applied some fixes

--- a/PatientLogin.html
+++ b/PatientLogin.html
@@ -82,7 +82,7 @@ body {font-family: Arial, Helvetica, sans-serif;
           <li><a href="ManufaturerLogin.html">Manufacturer</a></li>
           <li><a href="DistributorLogin.html">Distributor</a></li>
           <li><a href="PharmacyLogin.html">Pharmacy</a></li>
-          <li><a href="Admin.html">Admin</a>
+          <li><a href="AdminLogin.html">Admin</a>
          <!--  <li><a href="contact.html">Contact</a></li> -->
          <!--  <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
