--- a/ProfileView.html
+++ b/ProfileView.html
@@ -68,8 +68,8 @@ position:relative;
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="active" href="Home.jsp">Home</a></li>
-          <li><a class="active" href="ProfileView.jsp">View Profile</a></li>         
+          <li><a class="active" href="Home.html">Home</a></li>
+          <li><a class="active" href="ProfileView.html">View Profile</a></li>         
           <li class="dropdown">
            <a><b>Welcome<%response.setContentType("text/html");  
 				 HttpSession sessio=request.getSession(true);  
