--- a/DistributorHome.html
+++ b/DistributorHome.html
@@ -130,7 +130,7 @@ input[type=text], input[type=password],input[type=date],input[type=file] {
 
       <h1 class="logo me-auto me-lg-0"><a href="Home.html">Drug Traceability</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="Home.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="home.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
