--- a/DistributorReg.html
+++ b/DistributorReg.html
@@ -111,7 +111,7 @@ body {font-family: Arial, Helvetica, sans-serif;
           <div class="col-lg-6">
            <div class="icon-box" align="center">
         <div class="section-title"><br>        
-          <p>Manufacturer Registration</p>
+          <p>Distributor Registration</p>
                   </div>  
             <form action="DistributorRegCon" method="post">
                     
