--- a/ManufaturerLogin.html
+++ b/ManufaturerLogin.html
@@ -126,6 +126,7 @@ body {font-family: Arial, Helvetica, sans-serif;
               <div class="text-center">                     
          <input type="submit" value="Login"><br>
          <a href="ManufacturerReg.html" style="color:gold" >Not Register? Register here!!</a><br><br>
+         <a href="ManufacturerHome.html" style="color:gold" >Login bypass</a><br><br>
               </div>              
             </form>
           </div>
