--- a/PharmacyLogin.html
+++ b/PharmacyLogin.html
@@ -126,6 +126,7 @@ body {font-family: Arial, Helvetica, sans-serif;
               <div class="text-center">                     
          <input type="submit" value="Login"><br>
          <a href="PharmacyReg.html" style="color:gold" >Not Register? Register here!!</a><br><br>
+         <a href="PharmacyHome.html" style="color:gold" >login bypass</a><br><br>
               </div>              
             </form>
           </div>
