--- a/SupplierLogin.html
+++ b/SupplierLogin.html
@@ -71,9 +71,9 @@ body {font-family: Arial, Helvetica, sans-serif;
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="Home.html"><b>Drug Traceability</b></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="home.html"><b>Drug Traceability</b></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="Home.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="home.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -125,7 +125,8 @@ body {font-family: Arial, Helvetica, sans-serif;
                           
               <div class="text-center">                     
          <input type="submit" value="Login"><br>
-         <a href="PharmacyReg.html" style="color:gold" >Not Register? Register here!!</a><br><br>
+         <a href="SupplierRegistration.html" style="color:gold" >Not Register? Register here!!</a><br><br>
+         <a href="SupplierHome.html" style="color:gold" >Login bypass</a><br><br>
               </div>              
             </form>
           </div>
