--- a/SupplierRegistration.html
+++ b/SupplierRegistration.html
@@ -89,7 +89,7 @@ body {font-family: Arial, Helvetica, sans-serif;
           <li><a href="ManufaturerLogin.html">Manufacturer</a></li>
           <li><a href="DistributorLogin.html">Distributor</a></li>
           <li><a href="PharmacyLogin.html">Pharmacy</a></li>
-          <li><a href="Admin.html">Admin</a>
+          <li><a href="AdminLogin.html">Admin</a>
           <!-- <li><a href="contact.html">Contact</a></li> -->
          <!--  <li><a href="about.html">About</a></li>
           <li><a href="resume.html">Resume</a></li>
@@ -118,7 +118,7 @@ body {font-family: Arial, Helvetica, sans-serif;
           <div class="col-lg-6">
            <div class="icon-box" align="center">
         <div class="section-title"><br>        
-          <p>User Registration</p>
+          <p>Supplier Registration</p>
                   </div>  
             <form action="SupplierRegCon" method="post">
             
