--- a/PharmacyHome.html
+++ b/PharmacyHome.html
@@ -126,13 +126,13 @@ input[type=text], input[type=password],input[type=date],input[type=file] {
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="Home.html">Drug Traceability</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">Drug Traceability</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="Home.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="active" href="Home.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
        <!--  <li><a class="active" href="ViewBuyMedicine.html"><i class="fa fa-bell" style="font-size:18px"></i>Notification</a></li>               
          -->  
           <li class="dropdown">
@@ -174,7 +174,7 @@ input[type=text], input[type=password],input[type=date],input[type=file] {
   
 <!--   <button class="w3-button w3-black" style="width:200px;"><a href="BatchDetailsApproved2.html" style="color:white;" style="width:200px;">View Stock</a></button><br><br>
   <button class="w3-button w3-black" style="width:200px;"><a href="ViewAddDrug.html" style="color:white;" style="width:200px;">View All Drug</a></button><br><br>
-    <button class="w3-button w3-black" style="width:200px;"><a href="PaymentPharmHome.html" style="color:white;">Payment</a></button><br><br>
+    <button class="w3-button w3-black" style="width:200px;"><a href="PaymentPharmindex.html" style="color:white;">Payment</a></button><br><br>
  -->
 </div>
 </div>
