--- a/AdminHome.html
+++ b/AdminHome.html
@@ -63,13 +63,13 @@ position:relative;
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="Home.html"><b>Drug Traceability</b></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html"><b>Drug Traceability</b></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="Home.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="" href="Home.html">Home</a></li>
+          <li><a class="" href="index.html">Home</a></li>
           <li><a class="" href="ProfileView.html">View Profile</a></li>  
           <!-- <li><a class="" href="SendDrugApproval.html">View Notifications<i class="fa fa-bell cursor-pointer" style="font-size:16px"></i></a></li>         
           <li><a class="" href="ViewBatchDetails.html">View Batch Details</a></li>  -->
