--- a/ManufacturerHome.html
+++ b/ManufacturerHome.html
@@ -126,11 +126,11 @@ input[type=text], input[type=password],input[type=date],input[type=file] {
 
       <h1 class="logo me-auto me-lg-0"><a href="">Drug Traceability</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="Home.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="active" href="Home.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
           <li><a href="ViewSupplier.html">View Supplier</a></li>
           <li><a href="ViewDistributors.html">View Distributor</a></li> 	                   
          <li class="dropdown">
