--- a/ViewUser.html
+++ b/ViewUser.html
@@ -45,13 +45,13 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="Home.html"><b>Drug Traceability</b></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html"><b>Drug Traceability</b></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="Home.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="active" href="Home.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
           <li><a href="SupplierLogin.html">Supplier</a></li>
           <li><a href="ManufaturerLogin.html">Manufacturer</a></li>
           <li><a href="DistributorLogin.html">Distributor</a></li>
